# vanaspati

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  bench-history.csv  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh  version-bump.sh
src/: allelopathy.rs  biomass.rs  bridge.rs  decomposition.rs  dispersal.rs  ecosystem.rs  error.rs  evapotranspiration.rs  fire.rs  growth.rs  herbivory.rs  lai.rs  lib.rs  logging.rs  mortality.rs  mycorrhiza.rs  nitrogen.rs  pft.rs  phenology.rs  photosynthesis.rs  pollination.rs  reproduction.rs  respiration.rs  root.rs  season.rs  stomata.rs  succession.rs  water.rs
src/integration/: mod.rs  soorat.rs
tests/: integration.rs
