[package]
name = "vanaspati"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Vanaspati — botany and plant behavior engine for growth, photosynthesis, seasonal cycles, and ecosystems"
homepage = "https://github.com/MacCracken/vanaspati"
repository = "https://github.com/MacCracken/vanaspati"
readme = "README.md"
documentation = "https://docs.rs/vanaspati"
keywords = ["botany", "plants", "photosynthesis", "growth", "ecosystem"]
categories = ["science", "simulation"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
soorat-compat = []
logging = ["dep:tracing-subscriber"]

[dependencies]
hisab = { version = "1.3", default-features = false, features = ["transforms", "calc", "num"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
